transaction-service/src/main/java/com/example/transactionservice/exception/errors/application/ApplicationException.java
package com.example.transactionservice.exception.errors.application;

import lombok.Getter;
import lombok.Setter;
import org.springframework.http.HttpStatus;
import org.springframework.stereotype.Service;

@Getter
@Setter
public class ApplicationException extends RuntimeException {

    private String errorCode;
    private HttpStatus httpStatus;

    public ApplicationException(String message, String errorCode) {
        this(message, errorCode, HttpStatus.INTERNAL_SERVER_ERROR);
    }

    public ApplicationException(String message, String errorCode, HttpStatus httpStatus) {
        super(message);
        this.errorCode = errorCode;
        this.httpStatus = httpStatus;
    }
}
